fix: arreglar MazoDTO y WishlistController